@@ -6,6 +6,7 @@ Changelog: July 10, 2012
 * Added `nona_wp_title` to be used with `wp_title` filter
 * Removed deprecated function call to `add_custom_background`
 * Removed deprecated function call to `get_theme_data`
+* Updated post to post navigation in 'single.php'
 
 = CSS =
 
